# pyrogue

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  Makefile  README.ja.md  README.md  debug_corridor.py  debug_wand_direction.py  pyproject.toml  pyrogue.prof  requirements-dev.txt  requirements.txt  test_cursed_equipment.py  test_drop_messages.py  test_equipment_bugs.py  test_equipment_detailed.py  test_equipment_drop.py  test_game_screen_save.py  test_healing_potion.py  test_identification_system.py  test_inventory_display.py  test_item_drop.py  test_item_pickup.py  test_maze_generation.py  test_monster_kill_count.py  test_npc_integration.py  test_pickup_messages.py  test_ring_display.py  test_room_generation.py  test_save_load.py  test_turn_count.py  test_wand_usage.py  test_yendor_cli.py
.claude/: ai-logger-README.md  settings.json
.claude/context/: debt.md  history.md  tech.md
.claude/core/: current.md  next.md  overview.md  templates.md
.claude/scripts/: activity-logger.sh  ai-logger.sh  allow-check.sh  analyze-ai-logs.py  deny-check.sh  test-security.sh
docs/: architecture.md  cli_test_scenarios.md  combat_balance_proposal.md  combat_balance_v0.2.0_completed.md  development.md  features.md  game_design_document.md  overview.md  quality_assurance.md  sequence_diagrams.md  state_machine_diagrams.md  task.md  technical_specification.md
docs/components/: config.md  core.md  entities.md  map.md  ui.md  utils.md
saves/: game_save.pkl  game_save_backup.pkl  save_checksum.txt  save_metadata.json
scripts/: cli_test.sh
src/pyrogue/: __init__.py  config.py  constants.py  main.py
src/pyrogue/config/: __init__.py  env.py  game_settings.py  legacy.py
src/pyrogue/core/: __init__.py  auto_explore_handler.py  cli_engine.py  command_handler.py  debug_command_handler.py  engine.py  game_logic.py  game_logic_backup.py  game_logic_refactored.py  game_states.py  info_command_handler.py  input_handlers.py  save_load_handler.py  save_manager.py  score_manager.py
src/pyrogue/core/managers/: __init__.py  combat_manager.py  comprehensive_difficulty_system.py  dialogue_manager.py  floor_difficulty_manager.py  floor_manager.py  game_context.py  item_manager.py  monster_ai_manager.py  monster_ai_manager_old.py  monster_behavior_manager.py  monster_combat_manager.py  movement_manager.py  pathfinding_manager.py  trading_manager.py  turn_manager.py
src/pyrogue/entities/: __init__.py
src/pyrogue/entities/actors/: __init__.py  actor.py  inventory.py  monster.py  monster_spawner.py  monster_types.py  npc.py  npc_spawner.py  player.py  player_status.py  status_effects.py
src/pyrogue/entities/items/: amulet.py  base_item.py  cursed_items.py  effects.py  enhanced_item_spawner.py  identification.py  item.py  item_factory.py  item_spawner.py  item_types.py  light_items.py
src/pyrogue/entities/magic/: __init__.py  spells.py
src/pyrogue/entities/traps/: __init__.py  enhanced_trap_spawner.py  trap.py
src/pyrogue/map/: dungeon.py  dungeon_builder.py  dungeon_facade.py  dungeon_legacy.py  dungeon_manager.py  tile.py
src/pyrogue/map/dungeon/: __init__.py  advanced_corridor_generator.py  constants.py  corridor_builder.py  dark_room_builder.py  deadend_manager.py  director.py  door_manager.py  enhanced_bsp_builder.py  isolated_room_builder.py  line_drawer.py  maze_builder.py  optimization.py  profiler.py  room_builder.py  room_placement_optimizer.py  section_based_builder.py  special_room_builder.py  stairs_manager.py  tile_buffer.py  validation_manager.py
src/pyrogue/ui/components/: __init__.py  fov_manager.py  game_renderer.py  input_handler.py  save_load_manager.py
src/pyrogue/ui/screens/: __init__.py  dialogue_screen.py  game_over_screen.py  game_screen.py  game_screen.py.bak  game_screen_backup.py  game_screen_refactored.py  help_menu_screen.py  inventory_screen.py  magic_screen.py  menu_screen.py  quick_guide_screen.py  screen.py  symbol_explanation_screen.py  trading_screen.py  victory_screen.py  wand_selection_screen.py
src/pyrogue/utils/: __init__.py  coordinate_utils.py  logger.py
tests/: test_dungeon.py
tests/pyrogue/core/: test_common_command_handler.py  test_diverse_monster_ai.py  test_enhanced_hunger_system.py  test_permadeath.py  test_save_load.py  test_turn_count.py
tests/pyrogue/core/managers/: test_dialogue_manager.py  test_trading_manager.py
tests/pyrogue/entities/: test_hallucination_status_effect.py
tests/pyrogue/entities/actors/: test_inventory_bug_fixes.py  test_inventory_improvements.py  test_monster.py  test_monster_kill_count.py  test_npc.py  test_npc_integration.py  test_npc_spawner.py  test_player.py
tests/pyrogue/entities/items/: test_drop_messages.py  test_identification_system.py  test_item_drop.py  test_item_pickup.py  test_light_items.py  test_pickup_messages.py
tests/pyrogue/map/: test_dungeon.py  test_dungeon_basic.py  test_room_generation.py
tests/pyrogue/map/dungeon/: test_constants.py  test_corridor_builder.py  test_dark_room_builder.py  test_dark_room_integration.py  test_isolated_room_builder.py  test_isolated_room_integration.py  test_line_drawer.py  test_maze_builder.py
tests/pyrogue/ui/screens/: test_game_screen_save.py
