[project]
name = "pyrogue"
version = "0.1.0"
description = "A roguelike game built with Python and TCOD"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tcod>=16.2.3",
    "numpy>=1.26.3",
    "typing-extensions>=4.12.2",
]

[project.scripts]
game = "pyrogue.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "isort>=5.13.2",
    "mypy>=1.14.0",
    "pylint>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"