[project]
name = "pyrogue"
version = "0.1.0"
description = "A roguelike game built with Python and TCOD"
authors = [
    { name = "yuru-sha", email = "tomonori.iida@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tcod>=16.2.3",
    "numpy>=1.26.3",
    "typing-extensions>=4.12.2",
]

[project.scripts]
game = "pyrogue.main:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-httpx",
    "ipython",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I", "UP", "C90", "N", "D", "S", "ANN", "ASYNC", "B", "BLE", "ERA", "EXE", "FA", "FLY", "FURB", "G", "ICN", "LOG", "PIE", "PL", "PT", "PYI", "Q", "RET", "RSE", "RUF", "SIM", "SLF", "SLOT", "T10", "T20", "TCH", "TID", "TRY", "YTT"]
ignore = [
    "E501", "RUF001", "RUF002", "RUF003", "ERA001",
    "D100", "D104", "D105", "D106", "D107", "D203", "D212", "D400", "D401", "D415",
    "ANN101", "ANN102", "ANN401",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["kumoumi"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",    # Allow assert statements in tests
    "ANN001",  # Missing type annotation for function argument (tests don't need all annotations)
    "ANN201",  # Missing return type annotation (tests functions often return None implicitly)
    "D103",    # Missing docstring in public function (test functions don't need docstrings)
    "PLR2004", # Magic value used in comparison (tests often use literal values)
    "RUF002",  # Allow full-width characters in docstrings (Japanese comments)
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# show_error_codes = true
# namespace_packages = true
# explicit_package_bases = true
# check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "pandas.*",
    "openmeteo_requests",
    "openmeteo_sdk"
]
ignore_missing_imports = true
