[project]
name = "pyrogue"
version = "0.1.0"
description = "A roguelike game built with Python and TCOD"
authors = [
    { name = "yuru-sha", email = "tomonori.iida@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tcod>=19.0.0",
    "numpy>=1.26.3",
    "typing-extensions>=4.12.2",
    "python-dotenv>=1.0.0",
]

[project.scripts]
game = "pyrogue.main:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-httpx",
    "ipython",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "C90", "N", "D", "S", "ANN", "ASYNC", "B", "BLE", "ERA", "EXE", "FA", "FLY", "FURB", "G", "ICN", "LOG", "PIE", "PL", "PT", "PYI", "Q", "RET", "RSE", "RUF", "SIM", "SLF", "SLOT", "T10", "T20", "TCH", "TID", "TRY", "YTT"]
ignore = [
    "E501", "RUF001", "RUF002", "RUF003", "ERA001",
    "D100", "D104", "D105", "D106", "D107", "D203", "D212", "D400", "D401", "D415",
    "ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN401", "N999",
    "PLR0913",  # Too many arguments (often unavoidable in config/setup functions)
    "PLR0915",  # Too many statements (especially common in dashboard pages)
    "PLR0912",  # Too many branches (CLI commands naturally have many branches)
    "C901",     # Complex functions (CLI commands are inherently complex)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["kumoumi"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",    # Allow assert statements in tests
    "S106",    # Allow hardcoded passwords in tests (test fixtures need literal passwords)
    "ANN001",  # Missing type annotation for function argument
    "ANN002",  # Missing type annotation for *args
    "ANN003",  # Missing type annotation for **kwargs
    "ANN201",  # Missing return type annotation for public function
    "ANN202",  # Missing return type annotation for private function
    "ANN204",  # Missing return type annotation for special method
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "E402",    # Module level import not at top of file (test fixtures sometimes need this)
    "PLR2004", # Magic value used in comparison (tests often use literal values)
    "PLR0912", # Too many branches (test functions can be complex)
    "PLR0913", # Too many arguments (test functions often need many parameters)
    "PLR0915", # Too many statements (test functions can be long)
    "C901",    # Function is too complex (test functions can be complex)
    "RUF002",  # Allow full-width characters in docstrings (Japanese comments)
    "RUF012",  # Mutable class attributes should be annotated with ClassVar (test classes don't need this)
    "SLF001",  # Private member accessed (tests need to access private members sometimes)
    "B007",    # Loop control variable not used within loop body (tests may have unused variables)
    "F841",    # Local variable assigned but never used (tests may have intentionally unused variables)
    "N806",    # Variable should be lowercase (tests may use different naming for clarity)
    "N812",    # Lowercase imported as non-lowercase (tests may import differently for clarity)
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# show_error_codes = true
# namespace_packages = true
# explicit_package_bases = true
# check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "pandas.*",
    "openmeteo_requests",
    "openmeteo_sdk"
]
ignore_missing_imports = true
